@@ -32,7 +32,7 @@
 /* Establish fonts. */	
 
 	if ($options[$themeslug.'_font'] == "" AND $options[$themeslug.'_custom_font'] == "") {
-		$font = 'Helvetica+Neue';
+		$font = 'Arial';
 	}
 			
 	elseif ($options[$themeslug.'_custom_font'] != "") {
@@ -149,7 +149,7 @@
 	
 </head>
 
-<body style="font-family:'<?php echo $fontstrip ?>', Arial, serif ;" <?php body_class(); ?> >
+<body style="font-family:'<?php echo $fontstrip ?>', Helvetica, serif ;" <?php body_class(); ?> >
 	
 	<div id="page-wrap">
 		
